#8612 closed defect (fixed)
Transcode OUT switches to fast-forward at 35:47
| Reported by: | markfilipak | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | ffmpeg |
| Version: | git-master | Keywords: | |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Summary of the bug:
How to reproduce:
ffmpeg -report -ss 0:00 -analyzeduration 5000000000 -probesize 5000000000 -i G:\BDMV\STREAM\00004.m2ts -filter_complex "telecine=pattern=5,split[A][B],[A]select='not(bitor(eq(mod(n+1\,10)\,3)\,eq(mod(n+1\,10)\,8)))'[C],[B]select='bitor(eq(mod(n+1\,10)\,3)\,eq(mod(n+1\,10)\,8))',smartblur[D],[C][D]interleave" -map 0 -c:v libx264 -crf 20 -an -sn "C:\AVOut\00004.3.MKV" ffmpeg version ffmpeg version git-2020-04-03-52523b6
Attachments (1)
Change History (33)
by , 6 years ago
| Attachment: | 00004.3.LOG.ZIP added |
|---|
comment:1 by , 6 years ago
comment:2 by , 6 years ago
I think this can not be reproduced and thus fixed without input file.
Make sure that input file is actually constant frame rate.
comment:3 by , 6 years ago
This is reason of spotted issue:
[matroska @ 000001fcf1b5d9c0] Non-monotonous DTS in output stream 0:0; previous: 2147466, current: -2147484; changing to 2147466. This may result in incorrect timestamps in the output file.
Not ffmpeg bug.
follow-up: 6 comment:4 by , 6 years ago
I would not be so fast with that conclusion. After all, this error message comes from the muxing side (actually from code in ffmpeg.c) and so these timestamps probably originate from a place in our codebase.
comment:5 by , 6 years ago
So what you propose instead? As is ticked should be closed as issue can not be reproduced.
comment:6 by , 6 years ago
Replying to mkver:
I would not be so fast with that conclusion. After all, this error message comes from the muxing side (actually from code in ffmpeg.c) and so these timestamps probably originate from a place in our codebase.
Hey mkver,
You provided a cogent observation: "35:47 = 2147s. 2147000000 is pretty close to INT_MAX, so probably an overflow issue."
I replied: "Thanks. That makes sense. What can I do to overcome it? Can it be overcome?"
I think the output is CFR 60/1.001 (or can be forced to that). If so, can the PTSs be forced to proper values?
To ricardpl,
You can reproduce the issue with my command line and any p24 video that's over 36 minutes in length.
One other clue: If I '-ss' delay the output, the point in the output where the playback goes fast-forward (2x, I think) remains the same: 35:47. So the cause can't be in the video source.
follow-ups: 8 10 11 comment:7 by , 6 years ago
Unfortunately it can not be reproduced at all.
ffmpeg -f lavfi -i color=black:s=16x16:r=24 -filter_complex "telecine=pattern=5,split[A][B],[A]select='not(bitor(eq(mod(n+1\,10)\,3)\,eq(mod(n+1\,10)\,8)))'[C],[B]select='bitor(eq(mod(n+1\,10)\, 3)\,eq(mod(n+1\,10)\,8))',smartblur[D],[C][D]interleave" out.mkv
comment:8 by , 6 years ago
Never mind. Windows put a carriage return in the wrong place when I cut and pasted.
comment:10 by , 6 years ago
Replying to richardpl:
Unfortunately it can not be reproduced at all.
ffmpeg -f lavfi -i color=black:s=16x16:r=24 -filter_complex "telecine=pattern=5,split[A][B],[A]select='not(bitor(eq(mod(n+1\,10)\,3)\,eq(mod(n+1\,10)\,8)))'[C],[B]select='bitor(eq(mod(n+1\,10)\, 3)\,eq(mod(n+1\,10)\,8))',smartblur[D],[C][D]interleave" out.mkv
Okay... Under control now. Looks like the same issue. Here's the log:
ffmpeg started on 2020-04-11 at 06:57:07
Report written to "ffmpeg-20200411-065707.log"
Log level: 32
Command line:
ffmpeg -report -f lavfi -i "color=black:s=16x16:r=24" -filter_complex "telecine=pattern=5,split[A][B],[A]select='not(bitor(eq(mod(n+1\\,10)\\,3)\\,eq(mod(n+1\\,10)\\,8)))'[C],[B]select='bitor(eq(mod(n+1\\,10)\\,3)\\,eq(mod(n+1\\,10)\\,8))',smartblur[D],[C][D]interleave" out.mkv
ffmpeg version git-2020-04-03-52523b6 Copyright (c) 2000-2020 the FFmpeg developers
built with gcc 9.3.1 (GCC) 20200328
configuration: --enable-gpl --enable-version3 --enable-sdl2 --enable-fontconfig --enable-gnutls --enable-iconv --enable-libass --enable-libdav1d --enable-libbluray --enable-libfreetype --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libopus --enable-libshine --enable-libsnappy --enable-libsoxr --enable-libsrt --enable-libtheora --enable-libtwolame --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxml2 --enable-libzimg --enable-lzma --enable-zlib --enable-gmp --enable-libvidstab --enable-libvmaf --enable-libvorbis --enable-libvo-amrwbenc --enable-libmysofa --enable-libspeex --enable-libxvid --enable-libaom --enable-libmfx --enable-ffnvcodec --enable-cuda-llvm --enable-cuvid --enable-d3d11va --enable-nvenc --enable-nvdec --enable-dxva2 --enable-avisynth --enable-libopenmpt --enable-amf
libavutil 56. 42.102 / 56. 42.102
libavcodec 58. 77.101 / 58. 77.101
libavformat 58. 42.100 / 58. 42.100
libavdevice 58. 9.103 / 58. 9.103
libavfilter 7. 77.101 / 7. 77.101
libswscale 5. 6.101 / 5. 6.101
libswresample 3. 6.100 / 3. 6.100
libpostproc 55. 6.100 / 55. 6.100
Input #0, lavfi, from 'color=black:s=16x16:r=24':
Duration: N/A, start: 0.000000, bitrate: N/A
Stream #0:0: Video: rawvideo (I420 / 0x30323449), yuv420p, 16x16 [SAR 1:1 DAR 1:1], 24 tbr, 24 tbn, 24 tbc
[Parsed_telecine_0 @ 0000023ac87c6700] Telecine pattern 5 yields up to 3 frames per frame, pts advance factor: 2/5
Stream mapping:
Stream #0:0 (rawvideo) -> telecine
interleave -> Stream #0:0 (libx264)
Press [q] to stop, [?] for help
[Parsed_telecine_0 @ 0000023ac87cb580] Telecine pattern 5 yields up to 3 frames per frame, pts advance factor: 2/5
[libx264 @ 0000023ac87d43c0] using SAR=1/1
[libx264 @ 0000023ac87d43c0] using cpu capabilities: MMX2 SSE2Fast SSSE3 SSE4.2 AVX FMA3 BMI2 AVX2
[libx264 @ 0000023ac87d43c0] profile High, level 5.2, 4:2:0, 8-bit
[libx264 @ 0000023ac87d43c0] 264 - core 159 - H.264/MPEG-4 AVC codec - Copyleft 2003-2019 - http://www.videolan.org/x264.html - options: cabac=1 ref=3 deblock=1:0:0 analyse=0x3:0x113 me=hex subme=7 psy=1 psy_rd=1.00:0.00 mixed_ref=1 me_range=16 chroma_me=1 trellis=1 8x8dct=1 cqm=0 deadzone=21,11 fast_pskip=1 chroma_qp_offset=-2 threads=1 lookahead_threads=1 sliced_threads=0 nr=0 decimate=1 interlaced=0 bluray_compat=0 constrained_intra=0 bframes=3 b_pyramid=2 b_adapt=1 b_bias=0 direct=1 weightb=1 open_gop=0 weightp=2 keyint=250 keyint_min=25 scenecut=40 intra_refresh=0 rc_lookahead=40 rc=crf mbtree=1 crf=23.0 qcomp=0.60 qpmin=0 qpmax=69 qpstep=4 ip_ratio=1.40 aq=1:1.00
Output #0, matroska, to 'out.mkv':
Metadata:
encoder : Lavf58.42.100
Stream #0:0: Video: h264 (libx264) (H264 / 0x34363248), yuv420p, 16x16 [SAR 1:1 DAR 1:1], q=-1--1, 1k tbn, 1000k tbc
Metadata:
encoder : Lavc58.77.101 libx264
Side data:
cpb: bitrate max/min/avg: 0/0/0 buffer size: 0 vbv_delay: N/A
frame=12367 fps=0.0 q=31.0 size= 241kB time=00:03:25.38 bitrate= 9.6kbits/s speed= 410x
frame=25724 fps=25704 q=31.0 size= 256kB time=00:07:08.00 bitrate= 4.9kbits/s speed= 428x
frame=39020 fps=25993 q=31.0 size= 512kB time=00:10:49.60 bitrate= 6.5kbits/s speed= 433x
frame=52796 fps=26376 q=31.0 size= 1024kB time=00:14:39.20 bitrate= 9.5kbits/s speed= 439x
frame=66495 fps=26570 q=31.0 size= 1280kB time=00:18:27.51 bitrate= 9.5kbits/s speed= 443x
frame=80134 fps=26687 q=31.0 size= 1536kB time=00:22:14.83 bitrate= 9.4kbits/s speed= 445x
frame=94081 fps=26853 q=31.0 size= 1792kB time=00:26:07.28 bitrate= 9.4kbits/s speed= 447x
frame=108090 fps=26992 q=31.0 size= 2048kB time=00:30:00.76 bitrate= 9.3kbits/s speed= 450x
frame=121503 fps=26971 q=31.0 size= 2304kB time=00:33:44.31 bitrate= 9.3kbits/s speed= 449x
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] invalid DTS: PTS is less than DTS
[matroska @ 0000023ac87d3240] Invalid DTS: 2147417 PTS: -2147484 in output stream 0:0, replacing by guess
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[libx264 @ 0000023ac87d43c0] invalid DTS: PTS is less than DTS
[matroska @ 0000023ac87d3240] Invalid DTS: 2147483 PTS: -2147484 in output stream 0:0, replacing by guess
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[matroska @ 0000023ac87d3240] Non-monotonous DTS in output stream 0:0; previous: 2147468, current: -2147484; changing to 2147468. This may result in incorrect timestamps in the output file.
[libx264 @ 0000023ac87d43c0] non-strictly-monotonic PTS
[matroska @ 0000023ac87d3240] Non-monotonous DTS in output stream 0:0; previous: 2147468, current: -2147484; changing to 2147468. This may result in incorrect timestamps in the output file.
...
...
[matroska @ 0000023ac87d3240] Non-monotonous DTS in output stream 0:0; previous: 2147468, current: -2147484; changing to 2147468. This may result in incorrect timestamps in the output file.
[matroska @ 0000023ac87d3240] Non-monotonous DTS in output stream 0:0; previous: 2147468, current: -2147484; changing to 2147468. This may result in incorrect timestamps in the output file.
[matroska @ 0000023ac87d3240] Non-monotonous DTS in output stream 0:0; previous: 2147468, current: -2147484; changing to 2147468. This may result in incorrect timestamps in the output file.
frame=129837 fps=17912 q=33.0 Lsize= 2556kB time=00:35:47.46 bitrate= 9.7kbits/s speed= 296x
video:1776kB audio:0kB subtitle:0kB other streams:0kB global headers:0kB muxing overhead: 43.932735%
[libx264 @ 0000023ac87d43c0] frame I:520 Avg QP: 9.02 size: 19
[libx264 @ 0000023ac87d43c0] frame P:32719 Avg QP:12.08 size: 18
[libx264 @ 0000023ac87d43c0] frame B:96598 Avg QP:15.68 size: 13
[libx264 @ 0000023ac87d43c0] consecutive B-frames: 0.8% 0.0% 0.0% 99.2%
[libx264 @ 0000023ac87d43c0] mb I I16..4: 100.0% 0.0% 0.0%
[libx264 @ 0000023ac87d43c0] mb P I16..4: 0.0% 0.0% 0.0% P16..4: 0.0% 0.0% 0.0% 0.0% 0.0% skip:100.0%
[libx264 @ 0000023ac87d43c0] mb B I16..4: 0.0% 0.0% 0.0% B16..8: 0.0% 0.0% 0.0% direct: 0.0% skip:100.0%
[libx264 @ 0000023ac87d43c0] 8x8 transform intra:0.0%
[libx264 @ 0000023ac87d43c0] coded y,uvDC,uvAC intra: 0.0% 0.0% 0.0% inter: 0.0% 0.0% 0.0%
[libx264 @ 0000023ac87d43c0] i16 v,h,dc,p: 0% 0% 100% 0%
[libx264 @ 0000023ac87d43c0] i8c dc,h,v,p: 100% 0% 0% 0%
[libx264 @ 0000023ac87d43c0] Weighted P-Frames: Y:0.0% UV:0.0%
[libx264 @ 0000023ac87d43c0] kb/s:-6.77
comment:11 by , 6 years ago
Replying to richardpl:
Unfortunately it can not be reproduced at all.
ffmpeg -f lavfi -i color=black:s=16x16:r=24 -filter_complex "telecine=pattern=5,split[A][B],[A]select='not(bitor(eq(mod(n+1\,10)\,3)\,eq(mod(n+1\,10)\,8)))'[C],[B]select='bitor(eq(mod(n+1\,10)\, 3)\,eq(mod(n+1\,10)\,8))',smartblur[D],[C][D]interleave" out.mkv
A carriage return wound up in the command line that you pasted, so when I copied it, it malfunctioned in Windows (of course).
follow-up: 13 comment:12 by , 6 years ago
Still can not be reproduced, but your FFmpeg version is older then mine.
So use really latest version.
comment:13 by , 6 years ago
Replying to richardpl:
Still can not be reproduced, but your FFmpeg version is older then mine.
So use really latest version.
My version's older? Really? I downloaded it 2 hours ago.
C:\>ffmpeg -version
ffmpeg version git-2020-04-03-52523b6 Copyright (c) 2000-2020 the FFmpeg developers
built with gcc 9.3.1 (GCC) 20200328
configuration: --enable-gpl --enable-version3 --enable-sdl2 --enable-fontconfig --enable-gnutls --enable-iconv --enable-libass --enable-libdav1d --enable-libbluray --enable-libfreetype --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libopus --enable-libshine --enable-libsnappy --enable-libsoxr --enable-libsrt --enable-libtheora --enable-libtwolame --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxml2 --enable-libzimg --enable-lzma --enable-zlib --enable-gmp --enable-libvidstab --enable-libvmaf --enable-libvorbis --enable-libvo-amrwbenc --enable-libmysofa --enable-libspeex --enable-libxvid --enable-libaom --enable-libmfx --enable-ffnvcodec --enable-cuda-llvm --enable-cuvid --enable-d3d11va --enable-nvenc --enable-nvdec --enable-dxva2 --enable-avisynth --enable-libopenmpt --enable-amf
libavutil 56. 42.102 / 56. 42.102
libavcodec 58. 77.101 / 58. 77.101
libavformat 58. 42.100 / 58. 42.100
libavdevice 58. 9.103 / 58. 9.103
libavfilter 7. 77.101 / 7. 77.101
libswscale 5. 6.101 / 5. 6.101
libswresample 3. 6.100 / 3. 6.100
libpostproc 55. 6.100 / 55. 6.100
follow-up: 15 comment:14 by , 6 years ago
| Resolution: | → needs_more_info |
|---|---|
| Status: | new → closed |
You are very ignorant person. Look at current date. Than look at date of your build.
Closing, I advise to anyone reading this to not lose any more time on this troll.
comment:15 by , 6 years ago
Replying to richardpl:
You are very ignorant person. Look at current date. Than look at date of your build.
Closing, I advise to anyone reading this to not lose any more time on this troll.
Here we go again. Why am I ignorant? Why am I a troll? Why are you abusing me?
follow-up: 17 comment:16 by , 6 years ago
Look at your output of binary: ffmpeg version git-2020-04-03
Also I see no reasonable source of issue you are trying to show up.
It could be platform specific or someone hijacked your binary or indeed there was genuine bug in FFmpeg recent git history.
comment:17 by , 6 years ago
Replying to richardpl:
Look at your output of binary: ffmpeg version git-2020-04-03
I went here:
https://www.ffmpeg.org/download.html#build-windows
and took the link found there to here:
https://ffmpeg.zeranoe.com/builds/
where it says:
"Nightly git builds contain more features, are usually stable, and are the required version when submitting bugs."
so I downloaded that build:
https://ffmpeg.zeranoe.com/builds/win64/static/ffmpeg-20200403-52523b6-win64-static.zip
Also I see no reasonable source of issue you are trying to show up.
I'm attempting to prove out that 5-5-5-5 pull-down telecine to 60/1.001 FPS yields a better video experience than does 24 FPS sent to, and 2-3-2-3 pull-down telecined by my TV's input. I've already confirmed that the TV does not do 4-6-4-6 pull-down telecine.
It could be platform specific or someone hijacked your binary or indeed there was genuine bug in FFmpeg recent git history.
Well, I recognize that the platform includes the player (MPV) and the TV. But if the platform is the same for both 24 FPS (original video) and my processed video... well, I will see the difference and it's a valid difference. Even if someone has a better 60Hz TV (mine's a Sharp), a better image is a better image, eh?
I'm unsure what "hijacked your binary" means.
comment:19 by , 6 years ago
Replying to richardpl:
Your FFmpeg version is 2020-04-03. Today is 2020-04-11.
Two points:
1 - Heard of COVID-19? Is there a 2020-04-11 build? Or is it on hold like the rest of the world?
2 - If the 2020-04-11 build exists, and it can't be obtained at https://www.ffmpeg.org/download.html#build-windows, then how do I get it? I would be delighted to use it.
comment:20 by , 6 years ago
Heard ever about compiling own FFmpeg build? http://trac.ffmpeg.org/wiki/CompilationGuide
comment:21 by , 6 years ago
If there is an issue it is reproducible with the following command line, also reproducible with 3e40b856
$ ffmpeg -f lavfi -i testsrc2=s=16x16 -vf interleave=1 -t 35:48 -vcodec libx264 out.mkv
follow-up: 23 comment:22 by , 6 years ago
follow-up: 24 comment:23 by , 6 years ago
Replying to Balling:
Will be fixed by https://patchwork.ffmpeg.org/project/ffmpeg/patch/CAB0OVGr=OnJ+_Gjui9m=62FoEwWaTBrXkHGoWc_rNhDF4DboYw@mail.gmail.com/
Did you test it?
comment:24 by , 6 years ago
Replying to cehoyos:
Replying to Balling:
Will be fixed by https://patchwork.ffmpeg.org/project/ffmpeg/patch/CAB0OVGr=OnJ+_Gjui9m=62FoEwWaTBrXkHGoWc_rNhDF4DboYw@mail.gmail.com/
Did you test it?
Excuse me if I appear dense...
Does "Will be fixed" mean that my bug has been accepted afterall even though the status says "closed"?
comment:26 by , 6 years ago
Replying to mkver:
Yes.
Thank you, mkver. Will I receive a notice when it's fixed so I know when to download a new build and continue testing/developement?
comment:27 by , 6 years ago
| Component: | undetermined → ffmpeg |
|---|---|
| Resolution: | needs_more_info |
| Status: | closed → reopened |
Let's just reopen it. If it's closed, you should get a message (at least if you are cc'ed to the topic; but maybe this requirement is unnecessary for thread authors?).
comment:28 by , 6 years ago
This is still not reproducible on my 64bit system. So some basic info is needed to know how to really reproduce this issue.
comment:29 by , 6 years ago
The issue is only reproducible on systems where LONG_MAX < LLONG_MAX like Windows or 32bit Linux.
comment:30 by , 6 years ago
| Resolution: | → fixed |
|---|---|
| Status: | reopened → closed |
Should be fixed in d5bf704f507d75d3ca996703440b51a68b87d5ba
comment:31 by , 6 years ago
Fixed! Wow! Thanks Carl Eugen.
By the way, I received no notice, and when I search by Reporter, no tickets bearing 'markfilipak' are found.
comment:32 by , 6 years ago
Seems like you should have added yourself to the cc-list then.
And most searches only search for non-closed tickets (if you click on your name above and remove the "status=!closed&" from the url I see this ticket among others).



Replying to markfilipak:
The output video plays to 35:47, then spontaneously shifts to fast-forward. MPV player shows running time as "35:47", but that's wrong. When running time 35:47 is reached, the video shifts to fast-forward.