ffmpeg: Do not clip timestamps at LONG_MAX.

Fixes ticket #8612.